fix(fonts): fix for Flash of invisible text (foit)
added font-display swap as recommended by google for lighthouse audit

--- a/src/preset/typography.scss
+++ b/src/preset/typography.scss
@@ -3,6 +3,7 @@
   src: url(https://stampinup-media.azureedge.net/core/fonts/proxima-nova/proxima_nova_scosf_thin_webfont.woff) format("woff"), url(https://stampinup-media.azureedge.net/core/fonts/proxima-nova/proxima_nova_scosf_thin_webfont.ttf) format("truetype");
   font-weight: 100;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -10,6 +11,7 @@
   src: url(https://stampinup-media.azureedge.net/core/fonts/proxima-nova/proxima_nova_light_webfont.eot?#iefix) format("embedded-opentype"), url(https://stampinup-media.azureedge.net/core/fonts/proxima-nova/proxima_nova_light_webfont.woff) format("woff"), url(https://stampinup-media.azureedge.net/core/fonts/proxima-nova/proxima_nova_light_webfont.ttf) format("truetype");
   font-weight: 300;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -17,6 +19,7 @@
   src: url(https://stampinup-media.azureedge.net/core/fonts/proxima-nova/proxima_nova_reg-webfont.eot?#iefix) format("embedded-opentype"), url(https://stampinup-media.azureedge.net/core/fonts/proxima-nova/proxima_nova_reg-webfont.woff) format("woff"), url(https://stampinup-media.azureedge.net/core/fonts/proxima-nova/proxima_nova_reg-webfont.ttf) format("truetype"), url(https://stampinup-media.azureedge.net/core/fonts/proxima-nova/proxima_nova_reg-webfont.svg#proxima_nova_rgregular) format("svg");
   font-weight: 400;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -24,6 +27,7 @@
   src: url(https://stampinup-media.azureedge.net/core/fonts/proxima-nova/proxima_nova_sbold-webfont.eot?#iefix) format("embedded-opentype"), url(https://stampinup-media.azureedge.net/core/fonts/proxima-nova/proxima_nova_sbold-webfont.woff) format("woff"), url(https://stampinup-media.azureedge.net/core/fonts/proxima-nova/proxima_nova_sbold-webfont.ttf) format("truetype"), url(https://stampinup-media.azureedge.net/core/fonts/proxima-nova/proxima_nova_sbold-webfont.svg#proxima_nova_ltbold) format("svg");
   font-weight: 700;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -31,12 +35,14 @@
   src: url(https://stampinup-media.azureedge.net/core/fonts/proxima-nova/proxima_nova_bold-webfont.eot?#iefix) format("embedded-opentype"), url(https://stampinup-media.azureedge.net/core/fonts/proxima-nova/proxima_nova_bold-webfont.woff) format("woff"), url(https://stampinup-media.azureedge.net/core/fonts/proxima-nova/proxima_nova_bold-webfont.ttf) format("truetype"), url(https://stampinup-media.azureedge.net/core/fonts/proxima-nova/proxima_nova_bold-webfont.svg#proxima_nova_rgbold) format("svg");
   font-weight: 900;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
   font-family: proxima_nova;
   src: url(https://stampinup-media.azureedge.net/core/fonts/proxima-nova/proxima_nova_light_italic_webfont.eot?#iefix) format("embedded-opentype"), url(https://stampinup-media.azureedge.net/core/fonts/proxima-nova/proxima_nova_light_italic_webfont.woff) format("woff"), url(https://stampinup-media.azureedge.net/core/fonts/proxima-nova/proxima_nova_light_italic_webfont.ttf) format("truetype");
   font-style: italic;
+  font-display: swap;
 }
 
 
